Update Project R Code.Rmd

--- a/Project R Code.Rmd
+++ b/Project R Code.Rmd
@@ -325,6 +325,9 @@ knitr::kable(table.data.frame, caption="Final Model Coefficients")
 
 ## Discussion
 Based on the model, age seems to be the biggest indicator of new customers. Similarly, we see that population plays an effect, with people in less population dense representing a part of  the new customer base. Similarly, older individuals also seem to encompass the newer customer base. Income also provides great insight, as we see that there is a negative trend between income and being a new customer. This leads to the conclusion that products on the cheaper end of the the spectrum, marketed towards older individuals in rural areas, are the most likely target marker for expanding the customer base. This also implies that new cheaper products from mingar are more likely to attract new customers, as well as customers outside of their usual high income customer base. In terms of specific products, the cheaper Active line of products seems to be the most conducive for attracting new customers.
+The final model for skin tone and number of flags from sleep tracking is a negative binomial model that includes the number of flags as the response, skin tone, sex, and the model released date as fixed-term predictors, and the logarithm of sleep duration as an offset. Our model gives strong evidence that the gender of the customers is significant, likely because of factors like amount of body hair. Regarding the model release date, new models have improvements on existing features related to the design and hardwares, and they are less likely to malfunction given that they are purchased and used for a shorter period of time compared to older models. These considerations explain why the model gives strong evidence that sex and model released date are significant, according to the p-values from individual hypothesis testing. 
+When skin tone is the only predictor in the model, the individual skin tone categories all pass the individual hypothesis testing. However, two of the categories have p-values higher than 0.05 after adding sex of the customers and model released date. This indicates some correlation between skin tone and the other predictors. Nevertheless, our model still gives strong evidence against the hypothesis that skin tone is not significant. This finding indicates that the issue raised about sleep tracking quality for people with dark skin tone needs to be taken seriously and resolved.
+
 ### Strengths and limitations
 Model 1: The interpretability of the model is a key strength that we decided to focus on: the limited number of variables and strong p-values give us numerical results that are easy to understand as well as visualise. In terms of difficulties with our model, customers that may be more privacy inclined may not be represented within the model, since we opted to focus our model on users that used specific emojis (thus indicating their skin colour). Customers that opted out of this feature for privacy reasons may not be accurately accounted for in the model. Customers could potentially use emojis that are not actually indicative of their own skin tone (for a variety of reasons). 
 
